fix bug where bg-brand jumps in front of content on scroll

--- a/assets/css/default/default.styles.css
+++ b/assets/css/default/default.styles.css
@@ -11,7 +11,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-34.5%, -50%);
-  z-index: 0;
+  z-index: 0 !important;
 }
 
 @media (max-width: 936px) {
