--- a/assets/sb-admin/css/sb-admin-2.custom.css
+++ b/assets/sb-admin/css/sb-admin-2.custom.css
@@ -2,6 +2,10 @@
     display: none;
 }
 
+#content {
+    z-index: 1 !important;
+}
+
 .sidebar {
     z-index: 1;
 }
